# music

./: .gitignore  .stylish-haskell.yaml  TAGS  TODO.org  config.yml  git.diffs  hie.yaml  music.cabal  stack.yaml  swirls.yml
.github/workflows/: haskell.yml
exec/: Aff.hs  Exp.hs  Fern.hs  Gen.hs  Main.hs  aff.yml  exp.yml
music/Compositions/Demos/: accrete.yml  exp.yml  order.yml  repeat.yml
music/Compositions/Sketches/: bridge.yml  config.yml
music/Compositions/Swirls/: Compose.hs  Swirls.hs  Utils.hs  config.yml
src/: Accent.hs  Chord.hs  Clef.hs  Compose.hs  ComposeData.hs  Config.hs  ConfigData.hs  Driver.hs  Duration.hs  Dynamic.hs  Instrument.hs  KeySignature.hs  Lily.hs  Mode.hs  Note.hs  Octave.hs  Pitch.hs  Rest.hs  Score.hs  Tempo.hs  TimeSignature.hs  Types.hs  Utils.hs  Voice.hs  VoiceEvent.hs
test/: Main.hs
