name:                music
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/music#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options:         -Wall
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Types, Lily, Utils, Driver
  other-modules:      
  build-depends:       base
                     , aeson
                     , containers
                     , free
                     , Interpolation
                     , lens
                     , lens-aeson
                     , mtl
                     , MonadRandom
                     , natural-numbers
                     , parsec
                     , protolude
                     , random
                     , random-shuffle
                     , text
  ghc-options:         -Wall -Werror -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -fno-warn-orphans

executable music
  hs-source-dirs:      exec
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , directory
                     , free
                     , music
                     , optparse-applicative
                     , protolude
                     , transformers
                     , yaml
  ghc-options:         -Wall -Werror -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -fno-warn-orphans

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test, src
  main-is:            Main.hs
  default-extensions: 
  build-depends:      base
                    , containers
                    , parsec
                    , HUnit
                    , QuickCheck
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , generic-arbitrary
                    , natural-numbers
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -fno-warn-orphans
  other-modules:     Types, Lily, Utils
