name:                music
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/music#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options:         -Wall
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Driver, Types, Utils
  other-modules:       Lily, Config
  build-depends:       base
                     , aeson
                     , containers
                     , free
                     , Interpolation
                     , lens
                     , lens-aeson
                     , mtl
                     , MonadRandom
                     , natural-numbers
                     , parsec
                     , parsec3-numbers
                     , protolude
                     , random
                     , random-shuffle
                     , split
                     , text
  ghc-options:         -Wall -Werror -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -fno-warn-orphans

executable music
  hs-source-dirs:      exec
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , directory
                     , free
                     , lens
                     , lens-aeson
                     , music
                     , optparse-applicative
                     , protolude
                     , random
                     , text
                     , transformers
                     , yaml
  ghc-options:         -Wall -Werror -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -fno-warn-orphans

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test, src
  main-is:            Main.hs
  default-extensions: 
  build-depends:      base
                    , aeson
                    , containers
                    , free
                    , music
                    , generic-arbitrary
                    , HUnit
                    , Interpolation
                    , lens
                    , lens-aeson
                    , mtl
                    , MonadRandom
                    , natural-numbers
                    , parsec
                    , parsec3-numbers
                    , process
                    , QuickCheck
                    , random
                    , random-shuffle
                    , split
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , text
                    , transformers
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -fno-warn-orphans
  other-modules:     Driver, Lily, Types, Utils, Config
