name:                music
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/music#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md 

library
  default-language:    Haskell2010
  hs-source-dirs:      src, music
  default-extensions:
  exposed-modules:     Driver, Types, Compose, ConfigData, Utils
  other-modules:       Lily, Config
  build-depends:       base
                     , aeson
                     , containers
                     , extra
                     , free
                     , Interpolation
                     , lens
                     , lens-aeson
                     , mtl
                     , monadlist
                     , monad-extras
                     , MonadRandom
                     , natural-numbers
                     , parsec
                     , parsec3-numbers
                     , protolude
                     , random
                     , random-shuffle
                     , safe
                     , split
                     , text
                     , unordered-containers
  ghc-options:         -Wall -Werror -haddock -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -fno-warn-orphans

executable music
  hs-source-dirs:      exec
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:
  build-depends:       base
                     , aeson
                     , directory
                     , extra
                     , free
                     , lens
                     , lens-aeson
                     , music
                     , optparse-applicative
                     , protolude
                     , random
                     , split
                     , splitmix
                     , text
                     , transformers
                     , yaml
  ghc-options:       -Wall -Werror -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -fno-warn-orphans -haddock

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test, src
  main-is:            Main.hs
  default-extensions: 
  build-depends:      base
                    , aeson
                    , containers
                    , extra
                    , free
                    , music
                    , generic-arbitrary
                    , HUnit
                    , Interpolation
                    , lens
                    , lens-aeson
                    , mtl
                    , MonadRandom
                    , natural-numbers
                    , parsec
                    , parsec3-numbers
                    , process
                    , QuickCheck
                    , random
                    , random-shuffle
                    , safe
                    , split
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , text
                    , transformers
                    , unordered-containers
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -fno-warn-orphans -fconstraint-solver-iterations=0
  other-modules:     Driver, Lily, Types, Utils, Config
